--- a/index.html
+++ b/index.html
@@ -4,8 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Escape The Maze - Hejzbh</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <script src="./index.js"></script>
+    <img src="./assets/maze-bg.webp" alt="Background" class="bg" />
+    <div class="input-container">
+      <input
+        type="number"
+        class="maze-cols"
+        placeholder="Width"
+        min="4"
+        value="8"
+      />
+      <span class="x">x</span>
+      <input
+        type="number"
+        class="maze-rows"
+        value="8"
+        min="4"
+        placeholder="Height"
+      />
+      <button title="Create maze" class="create-maze create-btn">
+        Create Maze
+      </button>
+    </div>
+
+    <div class="maze-container hidden">
+      <div class="maze-grid"></div>
+      <div class="maze-result"></div>
+      <button title="Create maze" class="test-maze test-btn">Test Maze</button>
+    </div>
+    <script src="./_js/index.js" type="module"></script>
   </body>
 </html>
